# goonDash

./: .gitignore  .gitmodules  .timetracker  CHANGELOG.md  CMakeLists.txt  Goon Dash Workflow.drawio  Makefile  README.md  runner.sh
.github/workflows/: build.yml  github-actions-demo.yml  github.yml  publish.yml  release.yml
assets/tiled/: background.lua  background.tsx  goonDash.tiled-project  goonDash.tiled-session  level1.lua  level1.tmx  sdl_dash.tiled-project  sdl_dash.tiled-session  terrain.lua  terrain.tsx
assets/tiled/templates/: PlayerStart.tx
docs/: Input.drawio
src/GoonDash/: gnpch.h  main.c
src/GoonDash/aux/: lua.c  lua.h  luaDebug.c  luaDebug.h
src/GoonDash/core/: debug.c  debug.h
src/GoonDash/input/: keyboard.c  keyboard.h
src/GoonDash/misc/: lua.c  lua.h  luaDebug.c
src/GoonDash/rendering/: tile.c  tile.h
src/GoonDash/scripting/: Debug.c  Debug.h  Draw.c  Draw.h  LuaGlue.c  LuaScripting.c  LuaScripting.h  Physics.c  Physics.h  SdlRect.c  SdlRect.h  SdlSurface.c  SdlSurface.h  SdlWindow.c  SdlWindow.h  Sound.c  Sound.h  tileatlas.c  tileatlas.h
src/Scripts/: main.lua  rectangle.lua  settings.lua  stubs.lua  surface.lua  tileset.lua  window.lua
src/Scripts/Core/: camera.lua  debug.lua  game.lua  gameobject.lua  gameobjectMap.lua  keyboardMap.lua  physics.lua  rectangle.lua  renderer.lua  sound.lua  surface.lua  texture.lua  textureAtlas.lua  tilemap.lua  tileset.lua
src/Scripts/GoonDash/: GoonDashGame.lua
src/Scripts/GoonDash/GameObjects/: deathbox.lua  enemy.lua  gameobjectMap.lua  player.lua  winbox.lua
src/Scripts/Graphics/: surface.lua  textureAtlas.lua
src/Scripts/Input/: controller.lua  playerController.lua
src/Scripts/Tiled/: tilemap.lua  tileset.lua
terraform/: backend.tf  cloudfront.tf  r53.tf  s3.tf
tests/: cppclean.sh
